cmake_minimum_required(VERSION 3.18)

project(
    SpaceGame
    VERSION 0.0
    LANGUAGES CXX
)

set(CMAKE_BUILD_TYPE debug CACHE STRING "Build mode <debug|release>")
set(CMAKE_PREFIX_PATH ${CMAKE_PREFIX_PATH};${CMAKE_BINARY_DIR}/libs/entt)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/libs)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(src)
